--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
+data
+.env*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+.DS_Store
 
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
+.python-version
 build/
 develop-eggs/
 dist/
